--- a/css/home.css
+++ b/css/home.css
@@ -22,7 +22,6 @@ nav {
   height: 14vh;
   display: flex;
   align-items: center;
-  color: #263238;
   background-color: #136a5a;
   position: fixed;
 }
@@ -195,9 +194,12 @@ img {
 
 /* CONTATO */
 #contato .form {
-  width: 52vw;
-  padding: 3% 1.5%;
-  box-shadow: 0 0 9px #90c320;
+  width: 55vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 3% 1.5% 1.5% 1.5%;
+  box-shadow: 0 0 10px 5px #90c320;
   /*font-size: min(30px, 3.8vw);*/
 }
 
@@ -217,8 +219,7 @@ img {
 
 #contato .form .single-input input {
   width: 97%;
-  padding: 2% 0;
-  margin-bottom: 2%;
+  padding-top: 3%;
   border: 0;
   border-bottom: 4px solid #444444;
   outline: 0;
@@ -233,9 +234,27 @@ img {
 
 #contato .form .single-input input:focus ~ label,
 #contato .form .single-input input:valid ~ label {
-  transform: translateY(-2.5em);
+  transform: translateY(-1.5em);
   font-size: max(14px, 1vw);
   color: #90c320;
+}
+
+#contato .form select{
+  font-family: "Poppins";
+  width: 80%;
+  background-color: #136a5a;
+  color: white;
+  height: 2em;
+  font-size: 1em;
+  border: 0;
+  border-radius: 10px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#contato .form button{
+  margin-top: 2%;
+  background-color: #136a5a;
 }
 
 button {
@@ -466,9 +485,9 @@ a:active {
   font-size: 2.2em;
 }
 
-.popup-wrapper .signupCustomer .popup-content form,
+.popup-wrapper .signupCustomer .popup-content .form,
 .popup-wrapper .signupScavenger .popup-content,
-.popup-wrapper .signupScavenger2 .popup-content form {
+.popup-wrapper .signupScavenger2 .popup-content .form {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -476,7 +495,7 @@ a:active {
   justify-content: center;
 }
 
-.popup-wrapper .signupCustomer .popup-content form .background,
+.popup-wrapper .signupCustomer .popup-content .form .background,
 .popup-wrapper .signupScavenger .popup-content .background {
   display: grid;
   grid-template-areas:
@@ -488,7 +507,7 @@ a:active {
   margin: 7%;
 }
 
-.popup-wrapper .signupCustomer .popup-content form .background .table,
+.popup-wrapper .signupCustomer .popup-content .form .background .table,
 .popup-wrapper .signupScavenger .popup-content .background .table {
   grid-area: table;
   width: 95%;
@@ -499,7 +518,7 @@ a:active {
   margin-top: 5%;
 }
 
-.popup-wrapper .signupCustomer .popup-content form .background .bot,
+.popup-wrapper .signupCustomer .popup-content .form .background .bot,
 .popup-wrapper .signupScavenger .popup-content .background .bot {
   grid-area: bot;
   display: flex;
@@ -508,7 +527,7 @@ a:active {
   justify-content: center;
 }
 
-.popup-wrapper .signupCustomer .popup-content form .background .table input,
+.popup-wrapper .signupCustomer .popup-content .form .background .table input,
 .popup-wrapper .signupScavenger .popup-content .background .table input {
   margin-bottom: 10%;
 }
@@ -516,7 +535,7 @@ a:active {
 .popup-wrapper
   .signupCustomer
   .popup-content
-  form
+  .form
   .background
   .bot
   input[type="date"],
@@ -529,27 +548,23 @@ a:active {
   margin-bottom: 5%;
 }
 
-.popup-wrapper .signupCustomer .popup-content form .background .table > label,
+.popup-wrapper .signupCustomer .popup-content .form .background .table > label,
 .popup-wrapper .signupScavenger .popup-content .background .table > label,
-.popup-wrapper .signupCustomer .popup-content form .background .bot > label,
+.popup-wrapper .signupCustomer .popup-content .form .background .bot > label,
 .popup-wrapper .signupScavenger .popup-content .background .bot > label{
   font-weight: 500;
   font-size: 1.2em;
   margin-bottom: 1.5%;
 }
 
-.popup-wrapper .signupScavenger .popup-content .background .bot ul.gender li{
-  margin: 0 auto;
-}
-
-.popup-wrapper .signupScavenger2 .popup-content form .background h2{
+.popup-wrapper .signupScavenger2 .popup-content .form .background h2{
   font-weight: 500;
   font-size: 1.2em;
   margin-bottom: 3%;
   margin-top: 5%;
 }
 
-.popup-wrapper .signupScavenger2 .popup-content form .background{
+.popup-wrapper .signupScavenger2 .popup-content .form .background{
   width: 90%;
   border-radius: 20px 260px 30px 360px;
   background-color: rgba(144, 195, 32, 0.28);
@@ -569,6 +584,7 @@ a:active {
   
 }
 
+.popup-wrapper .signupCustomer .popup-content .background ul.gender,
 .popup-wrapper .signupScavenger2 ul.periodo,
 .popup-wrapper .signupScavenger .popup-content .background .bot ul.gender{
   width: 60%;
@@ -579,13 +595,14 @@ a:active {
   margin-bottom: 5%;
 }
 
+.popup-wrapper .signupCustomer .popup-content .background ul.gender li,
 .popup-wrapper .signupScavenger2 ul.periodo li,
 .popup-wrapper .signupScavenger .popup-content .background .bot ul.gender li{
   padding-right: 2%;
   margin: 0 auto;
 }
 
-.popup-wrapper .signupScavenger2 .popup-content form select {
+.popup-wrapper .signupScavenger2 .popup-content .form select {
   font-family: "Poppins";
   width: 80%;
   background-color: #1c5407;
