--- a/css/collect.css
+++ b/css/collect.css
@@ -3,7 +3,7 @@
     width: 80%;
     padding: 2%;
     border-radius: 20px;
-    box-shadow: 0 0 10px 10px grey;
+    box-shadow: 0 0 10px 10px rgba(128, 128, 128, 0.3);
     margin-bottom: 5%;
     display: flex;
     flex-direction: row;
